--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "overrides": {
+    "@react-pdf/renderer": {
+      "react": "^18.0.0"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -11,6 +16,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
+    "@react-pdf/renderer": "^3.4.4",
     "@tanstack/react-query": "^5.35.1",
     "axios": "^1.6.8",
     "firebase": "^10.11.1",
@@ -22,8 +28,10 @@
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-pdf": "^8.0.2",
     "react-router-dom": "^6.23.0",
     "react-tabs": "^6.0.2",
+    "react-to-pdf": "^1.0.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.8"
   },
