--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-tabs": "^6.0.2",
     "react-to-pdf": "^1.0.1",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.10.8"
+    "sweetalert2": "^11.10.8",
+    "swiper": "^11.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
