--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "^5.35.1",
     "axios": "^1.6.8",
     "firebase": "^10.11.1",
+    "framer-motion": "^11.1.9",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
@@ -28,6 +29,8 @@
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.10.2",
+    "react-loading-skeleton": "^3.4.0",
     "react-pdf": "^8.0.2",
     "react-router-dom": "^6.23.0",
     "react-tabs": "^6.0.2",
