--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@material-tailwind/react": "^2.1.9",
     "@react-pdf/renderer": "^3.4.4",
     "@tanstack/react-query": "^5.35.1",
